UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/Schedule__c.object-meta.xml
<CustomObject>
    <description>A Product specific alteration to a contract</description>
    <label>Schedule</label>
    <nameField>
        <displayFormat>S-{0000000000}</displayFormat>
        <label>Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>