UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <formula>Contract__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ID</label>
    <type>Text</type>
</CustomField>