UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>