UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Contract_Term_months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_months__c</fullName>
    <formula>((Schedule_End_Date__c -  Schedule_Start_Date__c)/365)*12</formula>
    <label>Contract Term (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>