UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>ContractStartDate__c</fullName>
    <formula>Contract__r.StartDate</formula>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>