UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <label>Day</label>
    <length>20</length>
    <type>Text</type>
</CustomField>