UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Expiration_Notification__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Notification__c</fullName>
    <description>In Days</description>
    <inlineHelpText>Expiration notification (in Days)</inlineHelpText>
    <label>Expiration Notification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Notify Owner of pending expiration</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>