UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Friday__c.field-meta.xml
<CustomField>
    <fullName>Friday__c</fullName>
    <label>Friday</label>
    <length>10</length>
    <type>Text</type>
</CustomField>