UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Friday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Friday_End_Time__c</fullName>
    <label>Friday End Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>