UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Generate_Document__c.field-meta.xml
<CustomField>
    <fullName>Generate_Document__c</fullName>
    <formula>HYPERLINK(&quot;/apex/loop__looplus?eid=&quot; &amp;   Id &amp; &quot;&amp;accountid=&quot; &amp;  Account_ID__c&amp;&quot;&amp;hidecontact=false&quot; &amp; &quot;&amp;sessionId=&quot; &amp;  $Api.Session_ID &amp;  &quot;&amp;image1=&quot; &amp; IF( $User.ProfileId = &apos;00eE00000010cfk&apos;, &apos;015E000000239iz.tif&apos;, IF($User.ProfileId=&quot;00eE000000104Cd&quot;,&quot;015E000000239iz.tif&quot;,&quot;&quot;)) ,  &quot;Select Document(s) for eSignature&quot;,&quot;_self&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Generate Document</label>
    <type>Text</type>
</CustomField>