UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Holiday__c.field-meta.xml
<CustomField>
    <fullName>Holiday__c</fullName>
    <label>Holiday</label>
    <length>255</length>
    <type>Text</type>
</CustomField>