UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Menu_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Menu_Holiday__c</fullName>
    <label>Menu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>