UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Monday__c.field-meta.xml
<CustomField>
    <fullName>Monday__c</fullName>
    <label>Monday</label>
    <length>10</length>
    <type>Text</type>
</CustomField>