UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/New_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To link Opportunities to Schedules (companies with existing contracts in place)</description>
    <label>New Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>