UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Overflow_Destination_Closed__c.field-meta.xml
<CustomField>
    <fullName>Overflow_Destination_Closed__c</fullName>
    <label>Overflow Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>