UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Saturday__c.field-meta.xml
<CustomField>
    <fullName>Saturday__c</fullName>
    <label>Saturday</label>
    <length>10</length>
    <type>Text</type>
</CustomField>