UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Schedule_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_End_Date__c</fullName>
    <description>Date at which the Schedule is no longer in effect</description>
    <label>Schedule End Date</label>
    <type>Date</type>
</CustomField>