UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Schedule_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Start_Date__c</fullName>
    <description>Date that schedule takes effect</description>
    <label>Schedule Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>