UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Service_Address__c.field-meta.xml
<CustomField>
    <fullName>Service_Address__c</fullName>
    <formula>Contract__r.ShippingStreet &amp; &apos; &apos; &amp; br() &amp;  
Contract__r.ShippingCity  &amp;  &apos; &apos; &amp;  
Contract__r.ShippingState &amp; &apos; &apos; &amp;  
Contract__r.ShippingPostalCode &amp; br() &amp;  
 Contract__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Address</label>
    <type>Text</type>
</CustomField>