UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Stop__c.field-meta.xml
<CustomField>
    <fullName>Stop__c</fullName>
    <label>Stop</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hours_of_the_day</valueSetName>
    </valueSet>
</CustomField>