UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Street_Address__c</fullName>
    <label>Street Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>