UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Sunday__c.field-meta.xml
<CustomField>
    <fullName>Sunday__c</fullName>
    <label>Sunday</label>
    <length>10</length>
    <type>Text</type>
</CustomField>