UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Sunday_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Sunday_Start_Time__c</fullName>
    <label>Sunday Start Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>