UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Thursday__c.field-meta.xml
<CustomField>
    <fullName>Thursday__c</fullName>
    <label>Thursday</label>
    <length>10</length>
    <type>Text</type>
</CustomField>