UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Thursday_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Start_Time__c</fullName>
    <label>Thursday Start Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>