UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Tuesday__c.field-meta.xml
<CustomField>
    <fullName>Tuesday__c</fullName>
    <label>Tuesday</label>
    <length>10</length>
    <type>Text</type>
</CustomField>