UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Ucf_Menu_Open__c.field-meta.xml
<CustomField>
    <fullName>Ucf_Menu_Open__c</fullName>
    <label>Menu</label>
    <length>255</length>
    <type>Text</type>
</CustomField>