UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/UCF_Name__c.field-meta.xml
<CustomField>
    <fullName>UCF_Name__c</fullName>
    <label>Name</label>
    <length>32</length>
    <type>Text</type>
</CustomField>