UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/UCF_Order__c.field-meta.xml
<CustomField>
    <fullName>UCF_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Schedules</relationshipLabel>
    <relationshipName>Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>