UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Wednesday__c</fullName>
    <label>Wednesday</label>
    <length>10</length>
    <type>Text</type>
</CustomField>