UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/X247_checkbox__c.field-meta.xml
<CustomField>
    <fullName>X247_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>247 checkbox</label>
    <type>Checkbox</type>
</CustomField>