UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>