UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/recordTypes/Auto_Attendants.recordType-meta.xml
<RecordType>
    <fullName>Auto_Attendants</fullName>
    <active>true</active>
    <label>Auto Attendants</label>
</RecordType>