UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/recordTypes/Multi_Line_Hunting_Groups.recordType-meta.xml
<RecordType>
    <fullName>Multi_Line_Hunting_Groups</fullName>
    <active>true</active>
    <label>Multi-Line Hunting Groups</label>
</RecordType>