UCF-APR2.4/ftr main/force-app/main/default/objects/Schedule__c/validationRules/End_Date_Greater_than_12312039.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Greater_than_12312039</fullName>
    <active>true</active>
    <description>Verify end date less than 12/31/2039. DPI has a built in limit on the date for that date.</description>
    <errorConditionFormula>Year(Schedule_End_Date__c) &gt; 2039</errorConditionFormula>
    <errorDisplayField>Schedule_End_Date__c</errorDisplayField>
    <errorMessage>Check your end year. To far in the future</errorMessage>
</ValidationRule>